--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -192,7 +192,7 @@
 
                         <div class="card-image">
                             <img src="../static/images/location_CampHill.jpg"
-                            alt="Explore the tranquil beauty of Camp Hill, a historic cemetery in Halifax.">
+                                alt="Explore the tranquil beauty of Camp Hill, a historic cemetery in Halifax.">
                         </div>
 
                         <div class="card-description flex flex-col">
@@ -207,8 +207,7 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations" 
-                                value="Camp Hill">
+                                <input type="radio" name="grave locations" value="Camp Hill">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                     <i class="fa-solid fa-microphone text-3xl microphone location_CampHill_audio"></i>
                                 </button>
@@ -222,7 +221,7 @@
 
                         <div class="card-image">
                             <img src="../static/images/location_FairviewLawn.jpg"
-                            alt="Discover the historic Fairview Lawn, a resting place for many.">
+                                alt="Discover the historic Fairview Lawn, a resting place for many.">
                         </div>
 
                         <div class="card-description flex flex-col">
@@ -237,10 +236,10 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations"
-                                value="Farview Lawn">
+                                <input type="radio" name="grave locations" value="Farview Lawn">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fa-solid fa-microphone text-3xl microphone location_FairviewLawn_audio"></i>
+                                    <i
+                                        class="fa-solid fa-microphone text-3xl microphone location_FairviewLawn_audio"></i>
                                 </button>
                             </div>
 
@@ -252,7 +251,7 @@
 
                         <div class="card-image">
                             <img src="../static/images/location_StPeters.jpg"
-                            alt="A landmark of faith, experience the history of St Peter's Cemetery.">
+                                alt="A landmark of faith, experience the history of St Peter's Cemetery.">
                         </div>
 
                         <div class="card-description flex flex-col">
@@ -267,8 +266,7 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations"
-                                value="St. Peter's">
+                                <input type="radio" name="grave locations" value="St. Peter's">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                     <i class="fa-solid fa-microphone text-3xl microphone location_StPeters_audio"></i>
                                 </button>
@@ -282,7 +280,7 @@
 
                         <div class="card-image">
                             <img src="../static/images/location_MtHermon.jpg"
-                            alt="A towering peak in a breathtaking landscape, consider Mt Hermon.">
+                                alt="A towering peak in a breathtaking landscape, consider Mt Hermon.">
                         </div>
 
                         <div class="card-description flex flex-col">
@@ -297,8 +295,7 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations"
-                                value="Mount Hermon">
+                                <input type="radio" name="grave locations" value="Mount Hermon">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                     <i class="fa-solid fa-microphone text-3xl microphone location_MtHermon_audio"></i>
                                 </button>
@@ -307,9 +304,9 @@
                         </div>
 
                     </div>
-                    
+
                 </div>
-                
+
             </div>
 
             <!--
@@ -429,7 +426,8 @@
             </div>
 
         </form>
-        <script src="../static/css/index.js"></script>
+        <script src="../static/javascript/index.js"></script>
     </div>
 </body>
+
 </html>
