--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -425,8 +425,10 @@
             </div>
 
         </form>
-        <script src="../static/javascript/index.js"></script>
     </div>
+
+    <!--Link to all JavaScript Files-->
+    <script src="../static/javascript/index.js"></script>
     <script src="../static/javascript/data-storage.js"></script>
 </body>
 </html>
