--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -58,7 +58,7 @@
                 <input type="email" id="email" autocomplete="off" required>
 
                 <label for="dob">Date of Birth</label>
-                <input type="date">
+                <input type="date" required>
 
                 <label for="places"># of Places</label>
                 <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
