--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -228,7 +228,7 @@
                         <div class="card-description flex flex-col">
 
                             <div class="card-text-heading text-center mb-3">
-                                Farview Lawn Cemetery
+                                Fairview Lawn Cemetery
                                 <hr class="border-black border-[3px]">
                             </div>
 
