--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -72,7 +72,7 @@
             <div class="burial-methods">
 
                 <div class="heading text-center mb-3">
-                    Burial Methods
+                    BURIAL METHODS
                 </div>
 
                 <div class="layout-burial-methods grid grid-cols-2 gap-5 place-items-center">
