--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -1,4 +1,5 @@
-<!--The purpose of this HTML file is to make the layout and display
+<!--
+    The purpose of this HTML file is to make the layout and display
     all information in a form that needs to be filled by the client
 
     Authors:
