--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -431,5 +431,6 @@
     <!--Link to all JavaScript Files-->
     <script src="../static/javascript/index.js"></script>
     <script src="../static/javascript/data-storage.js"></script>
+    <script src="../static/javascript/audio.js"></script>
 </body>
 </html>
