Corrected FairviewLawn audio and value.

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -228,7 +228,7 @@
                         <div class="card-description flex flex-col">
 
                             <div class="card-text-heading text-center mb-3">
-                                Farview Lawn Cemetery
+                                Fairview Lawn Cemetery
                                 <hr class="border-black border-[3px]">
                             </div>
 
@@ -237,7 +237,7 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations" value="Farview Lawn">
+                                <input type="radio" name="grave locations" value="Fairview Lawn">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                     <i
                                         class="fa-solid fa-microphone text-3xl microphone location_FairviewLawn_audio"></i>
@@ -431,5 +431,6 @@
     <!--Link to all JavaScript Files-->
     <script src="../static/javascript/index.js"></script>
     <script src="../static/javascript/data-storage.js"></script>
+    <script src = "../static/javascript/audio.js"> </script>
 </body>
 </html>
