--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -53,7 +53,7 @@
                 <input type="text" id="name" autofocus autocomplete="off" required>
 
                 <label for="phoneNum">Phone Number</label>
-                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
+                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" min="1" required>
 
                 <label for="email">Email</label>
                 <input type="email" id="email" autocomplete="off" required>
@@ -62,7 +62,7 @@
                 <input type="date" required>
 
                 <label for="places"># of Places</label>
-                <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
+                <input type="number" inputmode="numeric" id="places" class="appearance-none" min="1" required>
 
             </div>
 
