changed form action

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -42,7 +42,7 @@
 
         <br>
 
-        <form action="/getBurialInformation()" id="burial-form" method="post">
+        <form action="./download.html" id="burial-form" method="post">
 
             <!--
                 This HTML content contains all the general information
