--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -42,7 +42,7 @@
 
         <br>
 
-        <form action="./download.html" id="burial-form" method="post">
+        <form action="/getBurialInformation()" id="burial-form" method="post">
 
             <!--
                 This HTML content contains all the general information
@@ -53,7 +53,7 @@
                 <input type="text" id="name" autofocus autocomplete="off" required>
 
                 <label for="phoneNum">Phone Number</label>
-                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" min="1" required>
+                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
 
                 <label for="email">Email</label>
                 <input type="email" id="email" autocomplete="off" required>
@@ -62,7 +62,7 @@
                 <input type="date" required>
 
                 <label for="places"># of Places</label>
-                <input type="number" inputmode="numeric" id="places" class="appearance-none" min="1" required>
+                <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
 
             </div>
 
@@ -325,11 +325,11 @@
 
                         <div class="card-image">
                             <img src="../static/images/mo_woodenmemorialcross.jpg"
-                                alt="This is a wooden cross used for memorial purposes.">
+                                alt="This is a brown wooden cross with inscription on it set against the ground.">
                         </div>
 
                         <div class="card-text pt-2 pl-2">
-                            This is a wooden cross used for memorial purposes.
+                            This is a brown wooden cross with inscription on it set against the ground.
                         </div>
 
                         <div class="card-select flex">
@@ -349,7 +349,8 @@
                         </div>
 
                         <div class="card-text pt-2 pl-2">
-                            This is engraved stone marker for natural burial.
+                            <!-- This is an irregular engraved stone marker for natural burial. -->
+                            This is an irregular stone marker with details engraved used for natural burial.
                         </div>
 
                         <div class="card-select flex">
@@ -369,7 +370,7 @@
                         </div>
 
                         <div class="card-text pt-2 pl-2">
-                            This is a standing wooden plaque for natural burial.
+                            This is a brown wooden plaque with message inscripted on it standing on the ground.
                         </div>
 
                         <div class="card-select flex">
@@ -389,7 +390,8 @@
                         </div>
 
                         <div class="card-text pt-2 pl-2">
-                            This is a wooden board pinned at tree for identification.
+                            This is a commemorative wooden plaque pinned at a tree with details for identification.
+
                         </div>
 
                         <div class="card-select flex">
@@ -431,6 +433,7 @@
     <!--Link to all JavaScript Files-->
     <script src="../static/javascript/index.js"></script>
     <script src="../static/javascript/data-storage.js"></script>
-    <script src = "../static/javascript/audio.js"> </script>
+    <script src="../static/javascript/audio.js"> </script>
 </body>
+
 </html>
