updated code to display information on the same webpage

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -59,7 +59,7 @@
                 <input type="email" id="email" autocomplete="off" required>
 
                 <label for="dob">Date of Birth</label>
-                <input type="date" required>
+                <input type="date" id="DOB" required>
 
                 <label for="places"># of Places</label>
                 <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
@@ -431,9 +431,9 @@
     </div>
 
     <!--Link to all JavaScript Files-->
-    <script src="../static/javascript/index.js"></script>
     <script src="../static/javascript/data-storage.js"></script>
     <script src="../static/javascript/audio.js"> </script>
+    <script src="../static/javascript/data-display.js"></script>
 </body>
 
 </html>
