--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -264,11 +264,15 @@ input {
 }
 
 .form-submit {
-    font-size: 4.5rem;
+    font-size: 5rem;
 
     margin-top: 10%;
 
     input {
         padding: 0 2%;
     }
+}
+
+::before{
+    font-size: 80px;
 }
