--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -3,9 +3,9 @@
     all information in a form that needs to be filled by the client
 
     Authors:
-            Aakarshan Khosla [group leader] (A00474829)
-            Bhabin Chudal (A00464169)
+            Aakarshan Khosla (A00474829) [group leader]
             Aarav Sen Mehta (A00467075)
+            Bhabin Chudal (A00464169)
             Sadikshya Oli (A00457938)
 -->
 
