--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -95,7 +95,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone bm_casket_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_casket_audio"></i>
                             </button>
                         </div>
 
@@ -119,7 +119,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone bm_Ecoffins_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_Ecoffins_audio"></i>
                             </button>
                         </div>
 
@@ -143,7 +143,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone bm_shroud_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_shroud_audio"></i>
                             </button>
                         </div>
 
@@ -167,7 +167,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone bm_treepod_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_treepod_audio"></i>
                             </button>
                         </div>
 
@@ -210,7 +210,7 @@
                             <div class="card-select flex justify-evenly">
                                 <input type="radio" name="grave locations" value="Camp Hill">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fas fa-volume-up microphone location_CampHill_audio"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_CampHill_audio"></i>
                                 </button>
                             </div>
 
@@ -240,7 +240,7 @@
                                 <input type="radio" name="grave locations" value="Fairview Lawn">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                     <i
-                                        class="fas fa-volume-up microphone location_FairviewLawn_audio"></i>
+                                        class="fa-solid fa-microphone text-3xl microphone location_FairviewLawn_audio"></i>
                                 </button>
                             </div>
 
@@ -269,7 +269,7 @@
                             <div class="card-select flex justify-evenly">
                                 <input type="radio" name="grave locations" value="St. Peter's">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fas fa-volume-up microphone location_StPeters_audio"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_StPeters_audio"></i>
                                 </button>
                             </div>
 
@@ -298,7 +298,7 @@
                             <div class="card-select flex justify-evenly">
                                 <input type="radio" name="grave locations" value="Mount Hermon">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fas fa-volume-up microphone location_MtHermon_audio"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_MtHermon_audio"></i>
                                 </button>
                             </div>
 
@@ -335,7 +335,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Wooden Cross">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone mo_woodenmemorialcross_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_woodenmemorialcross_audio"></i>
                             </button>
                         </div>
 
@@ -356,7 +356,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Stone Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone mo_stonemarker_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_stonemarker_audio"></i>
                             </button>
                         </div>
 
@@ -376,7 +376,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Wooden Plaque">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone mo_woodenplaque_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_woodenplaque_audio"></i>
                             </button>
                         </div>
 
@@ -397,7 +397,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Tree Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fas fa-volume-up microphone mo_treemarker_audio"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_treemarker_audio"></i>
                             </button>
                         </div>
 
