added audio for submit button

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -423,7 +423,7 @@
             -->
             <div class="form-submit text-center">
                 <input type="submit" class="bg-white border-2 border-[#000000]
-                    rounded p-1 hover:bg-[#f5f5dc] rounded" type="submit">
+                    rounded p-1 hover:bg-[#f5f5dc] rounded" id="submitBtn">
                 </input>
             </div>
 
