--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -23,10 +23,16 @@
     <!--Link to CSS files-->
     <link rel="stylesheet" href="../static/css/index.css">
 
+    <!--Link to JQuery-->
+    <script src="../static/javascript/jquery-3.7.1.js"></script>
+    
+    <!--Link to client.js-->
+    <script src="../static/javascript/server/client.js"></script>
+
     <!-- CDN link to font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body>
@@ -42,27 +48,27 @@
 
         <br>
 
-        <form action="/getBurialInformation()" id="burial-form" method="post">
+        <form action="/burialInfo" id="burial-form" method="post">
 
             <!--
                 This HTML content contains all the general information
                 that will be entered by the client.
             -->
-            <div class="general-info grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
+            <div class="general-info grid grid-cols-1 md:grid-cols-3 gap-5 text-center">
                 <label for="name">Name</label>
-                <input type="text" id="name" autofocus autocomplete="off" required>
+                <input class="col-span-2 ml-2 text-center" type="text" id="name" autofocus autocomplete="off" name="name" required>
 
-                <label for="phoneNum">Phone Number</label>
-                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
+                <label for="phoneNum">Number</label>
+                <input class="col-span-2 ml-2 text-center" type="number" inputmode="numeric" id="phoneNum" class="appearance-none" name="phoneNum" required>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" autocomplete="off" required>
+                <input class="col-span-2 ml-2 text-center" type="email" id="email" autocomplete="off" name="email" required>
 
-                <label for="dob">Date of Birth</label>
-                <input type="date" id="DOB" required>
+                <label for="DOB">Date of Birth</label>
+                <input class="col-span-2 ml-2 text-center" type="date" id="DOB" name="DOB" required>
 
                 <label for="places"># of Places</label>
-                <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
+                <input class="col-span-2 ml-2 text-center" type="number" inputmode="numeric" id="places" class="appearance-none" name="places" required>
 
             </div>
 
@@ -415,7 +421,7 @@
                 <div class="quote flex justify-center items-center">
                     <label class="mr-2" for="inscription">Favourite Quote: </label>
                 </div>
-                <textarea name="" id="inscription" rows="3"></textarea>
+                <textarea name="inscription" id="inscription" rows="3"></textarea>
             </div>
 
             <!--
@@ -423,17 +429,19 @@
             -->
             <div class="form-submit text-center">
                 <input type="submit" class="bg-white border-2 border-[#000000]
-                    rounded p-1 hover:bg-[#f5f5dc] rounded" id="submitBtn">
+                    rounded pl-1 pr-1 hover:bg-[#f5f5dc] rounded" id="submitBtn" value="Upload" onclick="post()">
                 </input>
+                <button type="button" class="bg-white border-2 border-[#000000]
+                rounded pl-1 pr-1 hover:bg-[#f5f5dc] rounded" id="download" onclick="displayData()">
+                    Download
+                </button>
             </div>
 
         </form>
     </div>
 
     <!--Link to all JavaScript Files-->
-    <script src="../static/javascript/data-storage.js"></script>
     <script src="../static/javascript/audio.js"> </script>
-    <script src="../static/javascript/data-display.js"></script>
-</body>
 
+</body>
 </html>
