--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -17,19 +17,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natural Burial</title>
 
-    <!--Link to tailwind CDN-->
+    <!--Make tailwind CDN accessible to this file-->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!--Link to CSS files-->
     <link rel="stylesheet" href="../static/css/index.css">
 
-    <!--Link to JQuery-->
+    <!--Make JQuery accessible to this file-->
     <script src="../static/javascript/jquery-3.7.1.js"></script>
-    
+
     <!--Link to client.js-->
     <script src="../static/javascript/server/client.js"></script>
 
-    <!-- CDN link to font-awesome -->
+    <!-- Make font-awesome accessible to this file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -48,7 +48,7 @@
 
         <br>
 
-        <form action="/burialInfo" id="burial-form" method="post">
+        <form action="/saveBurialInfo" id="burial-form" method="post">
 
             <!--
                 This HTML content contains all the general information
@@ -427,12 +427,21 @@
             <!--
                 Submit area
             -->
-            <div class="form-submit text-center">
+            <div class="form-submit grid grid-cols-2 gap-5">
                 <input type="submit" class="bg-white border-2 border-[#000000]
-                    rounded pl-1 pr-1 hover:bg-[#f5f5dc] rounded" id="submitBtn" value="Upload" onclick="post()">
+                    rounded pl-1 pr-1 hover:bg-[#f5f5dc] min-w-72 rounded col-span-2
+                    justify-self-center" id="submitBtn" value="Submit" onclick="saveData()">
                 </input>
+
                 <button type="button" class="bg-white border-2 border-[#000000]
-                rounded pl-1 pr-1 hover:bg-[#f5f5dc] rounded" id="download" onclick="displayData()">
+                    rounded hover:bg-[#f5f5dc] min-w-72 rounded
+                    justify-self-end" id="uploadBtn" onclick="post()">
+                    Upload
+                </button>
+
+                <button type="button" class="bg-white border-2 border-[#000000]
+                    rounded pl-1 pr-1 hover:bg-[#f5f5dc] min-w-72 rounded
+                    justify-self-start" id="download" onclick="get()">
                     Download
                 </button>
             </div>
@@ -441,7 +450,6 @@
     </div>
 
     <!--Link to all JavaScript Files-->
-    <script src="../static/javascript/audio.js"> </script>
-
+    <script src="../static/javascript/audio.js"></script>
 </body>
 </html>
